no fixed background on mobile

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -17,29 +17,30 @@ p {
 }
 
 .background-image {
-    background-image: url(@background1);
-    background-repeat: no-repeat;
-    background-size: 130%;
-    background-position: 50% 0;
-    bottom: 0;
-    left: 0;
-    position: fixed;
-    right: 0;
-    top: 0;
-    z-index: -1;
-
     @media only screen and (min-width : @small) {
+        background-image: url(@background1);
         background-position: 50% 50%;
+        background-repeat: no-repeat;
         background-size: cover;
+        bottom: 0;
+        left: 0;
+        position: fixed;
+        right: 0;
+        top: 0;
+        z-index: -1;
     }
 }
 
 .scrolled-2 .background-image {
-    background-image: url(@background2);
+    @media only screen and (min-width : @small) {
+        background-image: url(@background2);
+    }
 }
 
 .background-image-2 {
-    background-image: url(@background2);
+    @media only screen and (min-width : @small) {
+        background-image: url(@background2);
+    }
 }
 
 h2 {
@@ -52,7 +53,10 @@ h3 {
 }
 
 .section-1 {
-    background-color: transparent;
+    background-image: url(@background1);
+    background-position: 50% 0;
+    background-repeat: no-repeat;
+    background-size: cover;
     color: #fff;
     padding: 120px 0;
 
@@ -100,6 +104,7 @@ h3 {
     }
 
     @media only screen and (min-width : @small) {
+        background: transparent;
         padding: 250px 0;
     }
 }
@@ -108,11 +113,14 @@ h3 {
     background: #fff;
     color: #000;
     padding: 50px 0;
-    height: 100vh;
 
     p {
         font-size: 1.4rem;
         font-weight: 500;
+    }
+
+    @media only screen and (min-width : @small) {
+        min-height: 115vh;
     }
 }
 
